2012-02-10  Xerxes Rånby  <xerxes@zafena.se>

	* Makefile.am
	(CACAO_VERSION): Updated CACAO to 2012-02-09 revision.
	(CACAO_SHA256SUM): Updated.
	(stamps/cacao.stamp): Use --with-java-runtime-library=openjdk7.
	Add -f when creating client and server symlinks to handle repeat builds.
	Link the fake libjsig.so to CACAO libjvm.so, and touch fake Xusage.txt
	to work with latest OpenJDK ALT_HOTSPOT_IMPORT_PATH functionality.
	* patches/cacao/version.patch: Removed, replaced by upstream CACAO changeset 30edcde287d9.

2012-10-08  Andrew John Hughes  <ahughes@redhat.com>

	(HOTSPOT_CHANGESET): Bump to fix HotSpot merge
	issue.
	(HOTSPOT_SHA256SUM): Likewise.

2012-10-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Move JDK_UPDATE_VERSION and COMBINED_VERSION
	to top of file with OPENJDK_VERSION.
	(JDK_UPDATE_VERSION): Set to 02 for u2.

2012-10-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(CORBA_CHANGESET): Updated.
	(HOTSPOT_CHANGESET): Likewise.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(HOTSPOT_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* generated/java/nio/DirectByteBuffer.java,
	* generated/java/nio/DirectByteBufferR.java,
	* generated/java/nio/DirectCharBufferRS.java,
	* generated/java/nio/DirectCharBufferRU.java,
	* generated/java/nio/DirectCharBufferS.java,
	* generated/java/nio/DirectCharBufferU.java,
	* generated/java/nio/DirectDoubleBufferRS.java,
	* generated/java/nio/DirectDoubleBufferRU.java,
	* generated/java/nio/DirectDoubleBufferS.java,
	* generated/java/nio/DirectDoubleBufferU.java,
	* generated/java/nio/DirectFloatBufferRS.java,
	* generated/java/nio/DirectFloatBufferRU.java,
	* generated/java/nio/DirectFloatBufferS.java,