@@ -5,19 +5,19 @@ JDK_UPDATE_VERSION = 02
 COMBINED_VERSION = $(JDK_UPDATE_VERSION)-$(OPENJDK_VERSION)
 
 CORBA_CHANGESET = 78cd4b4fcb75
-HOTSPOT_CHANGESET = c1378bce4f58
+HOTSPOT_CHANGESET = f8f4d3f9b165
 JAXP_CHANGESET = 7300d2ab9fb2
 JAXWS_CHANGESET = d26ff33070cb
-JDK_CHANGESET = 6ba07a297b14
-LANGTOOLS_CHANGESET = 1e3e0fc6b96a
+JDK_CHANGESET = afdcedc27c23
+LANGTOOLS_CHANGESET = 58f6a950cd72
 OPENJDK_CHANGESET = a66b58021165
 
 CORBA_SHA256SUM = c25abc052d0e3041c558869ba88f80bf3ff051efbcd20e6c22b862fdd4c066d4
-HOTSPOT_SHA256SUM = b5e763021c62bf0489b7147316e9015a05622fb398e4802275f39a2b9b01ac97
+HOTSPOT_SHA256SUM = 6bc2831c4c496f5a2850368fa4cacb3790e723176b7bf1ea63004c67d8371681
 JAXP_SHA256SUM = 0774d2acaa47052b8f529edae1ca868721a0164a956455958a6ea51550fa01e0
 JAXWS_SHA256SUM = 5f0a98280219fa8fe2926cfd4471fb0e98391b38a3c4b29743ad361832cea0e2
-JDK_SHA256SUM = db85a3ce380b6a3f1ed60178112bcb308b6f5a37eaeaedc4534acfd50275d87c
-LANGTOOLS_SHA256SUM = fc893721f587ac47a24aeec4a41774efd9df7f43db9c76efc1a380b061b23ade
+JDK_SHA256SUM = 35ad431d5d80e9b77bdbadc5218500e8ea377c3c731ddab0db7179bc5860075f
+LANGTOOLS_SHA256SUM = 3e66400ba51c5de4bf79be50dff41f47134ba2fcdbea845fb1ed0f492cfb0efb
 OPENJDK_SHA256SUM = 714a000514e273bae755f4cc90df839a298583b38bb93518d6cf805dede99b6d
 
 CACAO_VERSION = a567bcb7f589
